--- a/package.json
+++ b/package.json
@@ -18,9 +18,61 @@
         "react": "16.3.2"
     },
     "devDependencies": {
+        "@types/enzyme": "3.1.10",
+        "@types/jest": "22.2.3",
+        "@types/next": "2.4.10",
         "@types/react": "16.3.14",
-        "tslint": "5.10.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-react": "6.24.1",
+        "babel-preset-stage-0": "6.24.1",
+        "enzyme-adapter-react-16": "1.1.1",
+        "enzyme-to-json": "3.3.3",
+        "enzyme": "3.3.0",
+        "jest": "22.4.3",
+        "ts-jest": "22.4.6",
         "tslint-react": "3.6.0",
+        "tslint": "5.10.0",
         "typescript": "2.8.3"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "cacheDirectory": "<rootDir>/.jest/cache",
+        "testRegex": "(.*(__tests__\\/.*|\\.jest.(ts|tsx)))$",
+        "roots": [
+            "<rootDir>/components",
+            "<rootDir>/pages"
+        ],
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json"
+        ],
+        "collectCoverage": false,
+        "coverageReporters": [
+            "html"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.(ts|tsx)"
+        ],
+        "coveragePathIgnorePatterns": [
+            "interface",
+            ".test."
+        ],
+        "coverageDirectory": "<rootDir>/.jest/coverage",
+        "globals": {
+            "ts-jest": {
+                "babelConfig": {
+                    "presets": [
+                        "es2015",
+                        "stage-0",
+                        "react"
+                    ]
+                }
+            }
+        }
     }
 }
