Fixed aliasing stuff

--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,19 @@
     "presets": [
         "next/babel",
         "@zeit/next-typescript/babel"
+    ],
+    "plugins": [
+        [
+            "module-resolver",
+            {
+                "root": [
+                    "./"
+                ],
+                "alias": {
+                    "components": "./components",
+                    "lib": "./lib"
+                }
+            }
+        ]
     ]
 }
