--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "sky-vegas-next",
+    "name": "leah",
     "version": "0.1.0",
     "repository": {
         "type": "git",
-        "url": "ssh://git@stash.skybet.net:7999/vegas/next-vegas"
+        "url": "git@github.com:anarresk/leah.git"
     },
     "license": "UNLICENSED",
     "scripts": {
@@ -22,6 +22,7 @@
         "@types/jest": "22.2.3",
         "@types/next": "2.4.10",
         "@types/react": "16.3.14",
+        "babel-plugin-module-resolver": "3.1.1",
         "babel-preset-es2015": "6.24.1",
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-0": "6.24.1",
